# matrix_practice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/codeql/: codeql-config.yml
.github/workflows/: CI.yml  cmake.yml  codeql-analysis.yml
src/: CMakeLists.txt
src/matrix_basic/: matrix_on_heap.hpp  matrix_on_stack.hpp
tests/: CMakeLists.txt  test_matrix_basic_heap.cpp  test_matrix_basic_stack.cpp
